--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
+minecraft_version=1.21.2
+yarn_mappings=1.21.2+build.1
 loader_version=0.16.13
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.0.1-1.21.2
 maven_group=com.smithy.darcevo
 archives_base_name=darcevo
 
 # Dependencies
-fabric_version=0.121.0+1.21.5
+fabric_version=0.106.1+1.21.2
